# homeAdv

./: .dockerignore  .gitignore  .gitlab-ci.yml  3rdpartylicenses.txt  404.html  compose_ci.yml  docker-compose.yml  frontend-backend_communication.txt  index.html  karma.conf.js  main-es2015.048bf6bc3dd64af9afa3.js  main-es2015.0b0cc77e8b1165e68f10.js  main-es2015.2e91069b607150ca95aa.js  main-es2015.3a40a8a426b53d147d29.js  main-es2015.3b461301ed780beecc08.js  main-es2015.4d0c413248fcb106c8df.js  main-es2015.6e2279be7f8e17e9c17f.js  main-es2015.72fcf170930fb4c6e30b.js  main-es2015.7f1ec36aeb34b1c4ef0e.js  main-es2015.9962f55d553305f9d7a5.js  main-es2015.9feff97c35805374e763.js  main-es2015.ab5c9c861e936f7770d6.js  main-es2015.bae548da607d5275c57c.js  main-es2015.bc952e84fd4c0dd56a24.js  main-es2015.bf3262081af3da703a49.js  main-es2015.c74683d49b600e2ca5b9.js  main-es2015.c97babe41a2c0711622c.js  main-es2015.cf98c46bcf881d7ce359.js  main-es2015.e2f0149b145694778bd0.js  main-es2015.e7950f27762473607894.js  main-es2015.ec706738bff5c52706df.js  main-es2015.js  main-es2015.js.map  main-es5.048bf6bc3dd64af9afa3.js  main-es5.0b0cc77e8b1165e68f10.js  main-es5.2e91069b607150ca95aa.js  main-es5.3a40a8a426b53d147d29.js  main-es5.3b461301ed780beecc08.js  main-es5.4d0c413248fcb106c8df.js  main-es5.6e2279be7f8e17e9c17f.js  (+27 more)
backend/: Cargo.toml  Rocket.toml
backend/sql/: 00-schema.sql  01-data.sql  challenges.sql  home_adventure.sql
backend/src/: account.rs  challenge.rs  database_adaptions.rs  leaderboard.rs  main.rs  verification.rs
docker/: backend.dockerfile  (+2 more)
src/: index.html  (+1 more)
(+72 files in other folders)
