[package]
name = "backend"
version = "0.1.0"
authors = ["Felix Giese <felix.giese@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.4" }
rocket_contrib = { version = "0.4.4", features = ["postgres_pool"] }
serde = "*"
serde_derive = "*"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
bcrypt = "*"
chrono = "*"

[[bin]]
name = "dummy"
path = "src/dummy.rs"

[[bin]]
name= "backend"
path = "src/main.rs"
